--- a/initiator/prj.conf
+++ b/initiator/prj.conf
@@ -1,6 +1,14 @@
 
-CONFIG_SERIAL=y
+CONFIG_SERIAL=n
 CONFIG_GPIO=y
 CONFIG_NRF_DM=y
 CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_DEBUG_INFO=y
+CONFIG_NRFX_UARTE=y
+CONFIG_NRFX_UARTE0=y
+#CONFIG_CBPRINTF_FULL_INTEGRAL=y
+#CONFIG_CBPRINTF_FP_SUPPORT=y
+#CONFIG_CBPRINTF_FP_ALWAYS_A=y
+
+#CONFIG_NRFX_UART1_ENABLED=y
