Started to add high_pres, but missing symbols

--- a/initiator/prj.conf
+++ b/initiator/prj.conf
@@ -7,6 +7,9 @@ CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_DEBUG_INFO=y
 CONFIG_NRFX_UARTE=y
 CONFIG_NRFX_UARTE0=y
+#CONFIG_CMSIS
+CONFIG_CMSIS_DSP_TABLES=y
+CONFIG_CMSIS_DSP_TABLES_ALL_FFT=y
 #CONFIG_CBPRINTF_FULL_INTEGRAL=y
 #CONFIG_CBPRINTF_FP_SUPPORT=y
 #CONFIG_CBPRINTF_FP_ALWAYS_A=y
